# fastApiTestingProject

./: .gitignore  pyproject.toml
fastApiTestingProject/: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
fastApiTestingProject/migration/: env.py
fastApiTestingProject/migration/versions/: 09a35d3d777e_migration_description.py  c7298b689bcf_enable_soft_deleting.py
fastApiTestingProject/notes/src/api/: __init__.py  router.py
fastApiTestingProject/notes/src/api/notes/v1/: core.py
fastApiTestingProject/notes/src/api/v1/: __init__.py  healthcheck.py
fastApiTestingProject/notes/src/providers/: service.py
fastApiTestingProject/notes/src/repositories/notes/: core.py
fastApiTestingProject/notes/src/services/: core.py
